--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,10 +11,14 @@
             "gdbPath": "gdb-multiarch",
             "device": "RP2040",
             "configFiles": [
-                "interface/picoprobe.cfg",
+                "interface/cmsis-dap.cfg",
+                // "interface/picoprobe.cfg",
                 "target/rp2040.cfg"
             ],
-            "svdFile": "${env:PICO_SDK_PATH}/src/rp2040/hardware_regs/rp2040.svd",
+            "openOCDLaunchCommands": [
+                "adapter speed 5000"
+            ],
+            "svdFile": "./build/_deps/pico_sdk-src/src/rp2040/hardware_regs/rp2040.svd",
             "runToEntryPoint": "main",
             // Work around for stopping at main on restart
             "postRestartCommands": [
