--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,22 @@
 cmake_minimum_required(VERSION 3.12)
 
 # Pull in SDK (must be before project)
+set(PICO_SDK_FETCH_FROM_GIT TRUE)
+
+# set(PICO_BOARD pico_w)
 include(pico_sdk_import.cmake)
 
 set(PROJECT_NAME Starter-Project)
 
 project(${PROJECT_NAME} C CXX ASM)
-set(CMAKE_C_STANDARD 11)
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_C_STANDARD 17)
+set(CMAKE_CXX_STANDARD 23)
 
-if (PICO_SDK_VERSION_STRING VERSION_LESS "1.3.0")
+if(PICO_SDK_VERSION_STRING VERSION_LESS "1.3.0")
     message(FATAL_ERROR "Raspberry Pi Pico SDK version 1.3.0 (or later) required. Your version is ${PICO_SDK_VERSION_STRING}")
 endif()
 
-set(PICO_EXAMPLES_PATH ${PROJECT_SOURCE_DIR})
+# set(PICO_EXAMPLES_PATH ${PROJECT_SOURCE_DIR})
 
 # Initialize the SDK
 pico_sdk_init()
@@ -21,7 +24,10 @@ pico_sdk_init()
 add_subdirectory(source)
 
 add_compile_options(-Wall
-        -Wno-format          # int != int32_t as far as the compiler is concerned because gcc has int32_t as long int
-        -Wno-unused-function # we have some for the docs that aren't called
-        -Wno-maybe-uninitialized
-        )
+    -Wextra
+    -Wpedantic
+    -Wno-dev
+    -Wno-format # int != int32_t as far as the compiler is concerned because gcc has int32_t as long int
+    -Wno-unused-function # we have some for the docs that aren't called
+    -Wno-maybe-uninitialized
+)
